--- a/app/src/main/res/layout/fragment_recipes_by_category.xml
+++ b/app/src/main/res/layout/fragment_recipes_by_category.xml
@@ -3,23 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/home_recycler_view"
+        android:id="@+id/recipes_by_category_recycler_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/layout_recipe_item"
-        />
+        tools:listitem="@layout/layout_recipe_item" />
 
     <TextView
-        android:id="@+id/text_home_header_problem"
+        android:id="@+id/text_recipes_by_category_header_problem"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_home_problem"
+        android:id="@+id/text_recipes_by_category_problem"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -44,5 +42,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_home_header_problem" />
+        app:layout_constraintTop_toBottomOf="@+id/text_recipes_by_category_header_problem" />
 </androidx.constraintlayout.widget.ConstraintLayout>
